Provides user interface with dialog
Changes server answer from console log to dialog and improves ui elements

--- a/palindrome-requester-app/src/App.css
+++ b/palindrome-requester-app/src/App.css
@@ -45,3 +45,12 @@
   height: 40px;
   width: 200px;
 }
+
+.container {
+  margin-top: 10px;
+  text-align: center;
+}
+
+.textfield_container {
+  width: '50%'
+}
